rusqlite/libsqlite3-sys/src/bindgen.rs

    pub fn sqlite3_result_zeroblob64(arg1: *mut sqlite3_context,
                                     n: sqlite3_uint64)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_result_subtype(arg1: *mut sqlite3_context,
                                  arg2: ::std::os::raw::c_uint);
    pub fn sqlite3_create_collation(arg1: *mut sqlite3,
                                    zName: *const ::std::os::raw::c_char,
                                    eTextRep: ::std::os::raw::c_int,
                                    pArg: *mut ::std::os::raw::c_void,
                                    xCompare:
                                        ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                       *mut ::std::os::raw::c_void,
                                                                                   arg2:
                                                                                       ::std::os::raw::c_int,
                                                                                   arg3:
                                                                                       *const ::std::os::raw::c_void,
                                                                                   arg4:
                                                                                       ::std::os::raw::c_int,
                                                                                   arg5:
                                                                                       *const ::std::os::raw::c_void)
                                                                  ->
                                                                      ::std::os::raw::c_int>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_create_collation_v2(arg1: *mut sqlite3,
                                       zName: *const ::std::os::raw::c_char,
                                       eTextRep: ::std::os::raw::c_int,
                                       pArg: *mut ::std::os::raw::c_void,
                                       xCompare:
                                           ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                          *mut ::std::os::raw::c_void,
                                                                                      arg2:
                                                                                          ::std::os::raw::c_int,
                                                                                      arg3:
                                                                                          *const ::std::os::raw::c_void,
                                                                                      arg4:
                                                                                          ::std::os::raw::c_int,
                                                                                      arg5:
                                                                                          *const ::std::os::raw::c_void)
                                                                     ->
                                                                         ::std::os::raw::c_int>,
                                       xDestroy:
                                           ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                          *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_create_collation16(arg1: *mut sqlite3,
                                      zName: *const ::std::os::raw::c_void,
                                      eTextRep: ::std::os::raw::c_int,
                                      pArg: *mut ::std::os::raw::c_void,
                                      xCompare:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut ::std::os::raw::c_void,
                                                                                     arg2:
                                                                                         ::std::os::raw::c_int,
                                                                                     arg3:
                                                                                         *const ::std::os::raw::c_void,
                                                                                     arg4:
                                                                                         ::std::os::raw::c_int,
                                                                                     arg5:
                                                                                         *const ::std::os::raw::c_void)
                                                                    ->
                                                                        ::std::os::raw::c_int>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_collation_needed(arg1: *mut sqlite3,
                                    arg2: *mut ::std::os::raw::c_void,
                                    arg3:
                                        ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                       *mut ::std::os::raw::c_void,
                                                                                   arg2:
                                                                                       *mut sqlite3,
                                                                                   eTextRep:
                                                                                       ::std::os::raw::c_int,
                                                                                   arg3:
                                                                                       *const ::std::os::raw::c_char)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_collation_needed16(arg1: *mut sqlite3,
                                      arg2: *mut ::std::os::raw::c_void,
                                      arg3:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut ::std::os::raw::c_void,
                                                                                     arg2:
                                                                                         *mut sqlite3,
                                                                                     eTextRep:
                                                                                         ::std::os::raw::c_int,
                                                                                     arg3:
                                                                                         *const ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_sleep(arg1: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_get_autocommit(arg1: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_db_handle(arg1: *mut sqlite3_stmt) -> *mut sqlite3;
    pub fn sqlite3_db_filename(db: *mut sqlite3,
                               zDbName: *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
    pub fn sqlite3_db_readonly(db: *mut sqlite3,
                               zDbName: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_next_stmt(pDb: *mut sqlite3, pStmt: *mut sqlite3_stmt)
     -> *mut sqlite3_stmt;
    pub fn sqlite3_commit_hook(arg1: *mut sqlite3,
                               arg2:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)
                                                             ->
                                                                 ::std::os::raw::c_int>,
                               arg3: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_rollback_hook(arg1: *mut sqlite3,
                                 arg2:
                                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                    *mut ::std::os::raw::c_void)>,
                                 arg3: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_update_hook(arg1: *mut sqlite3,
                               arg2:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void,
                                                                              arg2:
                                                                                  ::std::os::raw::c_int,
                                                                              arg3:
                                                                                  *const ::std::os::raw::c_char,
                                                                              arg4:
                                                                                  *const ::std::os::raw::c_char,
                                                                              arg5:
                                                                                  sqlite3_int64)>,
                               arg3: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_enable_shared_cache(arg1: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_release_memory(arg1: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_db_release_memory(arg1: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_soft_heap_limit64(N: sqlite3_int64) -> sqlite3_int64;
    pub fn sqlite3_soft_heap_limit(N: ::std::os::raw::c_int);
    pub fn sqlite3_table_column_metadata(db: *mut sqlite3,
                                         zDbName:
                                             *const ::std::os::raw::c_char,
                                         zTableName:
                                             *const ::std::os::raw::c_char,
                                         zColumnName:
                                             *const ::std::os::raw::c_char,
                                         pzDataType:
                                             *mut *const ::std::os::raw::c_char,
                                         pzCollSeq:
                                             *mut *const ::std::os::raw::c_char,
                                         pNotNull: *mut ::std::os::raw::c_int,
                                         pPrimaryKey:
                                             *mut ::std::os::raw::c_int,
                                         pAutoinc: *mut ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_load_extension(db: *mut sqlite3,
                                  zFile: *const ::std::os::raw::c_char,
                                  zProc: *const ::std::os::raw::c_char,
                                  pzErrMsg: *mut *mut ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_enable_load_extension(db: *mut sqlite3,
                                         onoff: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
